# galton-board

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  sprawozdanie.md
src/: main.rs  pascal_triangle.rs
web/: index.html
